# python-project

./: LICENSE  README.md  pyproject.toml
kpi_dashboard/: README.MD  pyproject.toml
kpi_dashboard/src/: kpi_dashboard.py
opendrive_converter/: README.MD  pyproject.toml
opendrive_converter/src/: opendrive_converter.py
opendrive_converter/tests/: test_opendrive_converter.py
src/kpi_dashboard/: README.MD
src/opendrive_converter/: BinaryGrid_xodr.py
