[tool.poetry]
name = "APA_VV_Tools"
version = "1.0.0"
description = "Tools for verification and validaton used in automatic parking assist(APA) project"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.3.2"
opendrive_converter = { path = "src/opendrive_converter", extras = ["dependency_opendrive_converter"] }
kpi_dashboard = { path = "src/kpi_dashboard", extras = ["dependency_kpi_dashboard"] }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.2"
mypy = "^0.910"
bump2version = "^1.0.1"
tox = "^3.24.4"

[tool.flake8]
ignore = ['E203', 'E501', 'W503']
max-line-length = 88

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest]
addopts = "--cov=opendrive_converter --cov=kpi_dashboard --cov-report=term-missing"
testpaths = "tests/"

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
tag_name = "{new_version}"
message = "Bump version to {new_version}"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39
isolated_build = true

[testenv]
deps = pytest
commands = pytest
"""

[tool.poetry.extras]
dependency_opendrive_converter = [
    "dependency_c",
    "dependency_d",
]

dependency_kpi_dashboard = [
    "dependency_e",
    "dependency_f",
]