[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opendrive_converter"
version = "0.1.0"
description = "Generate yaml data with occupancy map and parking slots from OpenDrive file"
authors = [
    "Ajay KumarGS <Ajay.KumarGS@harman.com>",
]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
mypy = "^0.910"
pytest = "^6.2.0"
tox = "^3.24.0"

[tool.flake8]
max-line-length = 88
ignore = "E203, E501, W503"
exclude = ["__pycache__", "build", "dist"]

[tool.mypy]
files = ["src"]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true

[testenv]
deps = pytest
commands = pytest
"""